language/move-compiler/tests/move_check/naming/unbound_module_name.exp
warning[W09002]: unused variable
  ┌─ tests/move_check/naming/unbound_module_name.move:7:13
  │
7 │         let x = N::c;
  │             ^ Unused local variable 'x'. Consider removing or prefixing with an underscore: '_x'

error[E03003]: unbound module member
  ┌─ tests/move_check/naming/unbound_module_name.move:7:17
  │
7 │         let x = N::c;
  │                 ^^^^ Invalid module access. Unbound constant 'c' in module '0x42::N'

warning[W09002]: unused variable
  ┌─ tests/move_check/naming/unbound_module_name.move:8:13
  │
8 │         let y = Self::c;
  │             ^ Unused local variable 'y'. Consider removing or prefixing with an underscore: '_y'

error[E03003]: unbound module member
  ┌─ tests/move_check/naming/unbound_module_name.move:8:17
  │
8 │         let y = Self::c;
  │                 ^^^^^^^ Invalid module access. Unbound constant 'c' in module '0x42::M'

error[E03003]: unbound module member
  ┌─ tests/move_check/naming/unbound_module_name.move:9:13
  │
9 │         0 + N::c + Self::c;
  │             ^^^^ Invalid module access. Unbound constant 'c' in module '0x42::N'

error[E03003]: unbound module member
  ┌─ tests/move_check/naming/unbound_module_name.move:9:20
  │
9 │         0 + N::c + Self::c;
  │                    ^^^^^^^ Invalid module access. Unbound constant 'c' in module '0x42::M'

